[Thien] code server and update db.json
